backend/err.txt
file:///C:/Users/suhas/Desktop/Project/backend/services/nlpAnalyzer.js:48
            'cannot', 'can\\'t', 'unable', 'no money', 'financial difficulty',
                             ^

SyntaxError: Unexpected identifier 't'
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)

Node.js v22.17.0
